add anime data endpoint to the gRPC
