# pb/ampb/rpc_create_anime_movie_server.pb.go
@@ -1,0 +1,220 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.31.0
+// 	protoc        v4.24.4
+// source: ampb/rpc_create_anime_movie_server.proto
+
+package ampb
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type CreateAnimeMovieServerRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	AnimeID int64 `protobuf:"varint,1,opt,name=animeID,proto3" json:"animeID,omitempty"`
+}
+
+func (x *CreateAnimeMovieServerRequest) Reset() {
+	*x = CreateAnimeMovieServerRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_ampb_rpc_create_anime_movie_server_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *CreateAnimeMovieServerRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateAnimeMovieServerRequest) ProtoMessage() {}
+
+func (x *CreateAnimeMovieServerRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_ampb_rpc_create_anime_movie_server_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateAnimeMovieServerRequest.ProtoReflect.Descriptor instead.
+func (*CreateAnimeMovieServerRequest) Descriptor() ([]byte, []int) {
+	return file_ampb_rpc_create_anime_movie_server_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *CreateAnimeMovieServerRequest) GetAnimeID() int64 {
+	if x != nil {
+		return x.AnimeID
+	}
+	return 0
+}
+
+type CreateAnimeMovieServerResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	AnimeID  int64 `protobuf:"varint,1,opt,name=animeID,proto3" json:"animeID,omitempty"`
+	ServerID int64 `protobuf:"varint,2,opt,name=serverID,proto3" json:"serverID,omitempty"`
+}
+
+func (x *CreateAnimeMovieServerResponse) Reset() {
+	*x = CreateAnimeMovieServerResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_ampb_rpc_create_anime_movie_server_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *CreateAnimeMovieServerResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateAnimeMovieServerResponse) ProtoMessage() {}
+
+func (x *CreateAnimeMovieServerResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_ampb_rpc_create_anime_movie_server_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateAnimeMovieServerResponse.ProtoReflect.Descriptor instead.
+func (*CreateAnimeMovieServerResponse) Descriptor() ([]byte, []int) {
+	return file_ampb_rpc_create_anime_movie_server_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *CreateAnimeMovieServerResponse) GetAnimeID() int64 {
+	if x != nil {
+		return x.AnimeID
+	}
+	return 0
+}
+
+func (x *CreateAnimeMovieServerResponse) GetServerID() int64 {
+	if x != nil {
+		return x.ServerID
+	}
+	return 0
+}
+
+var File_ampb_rpc_create_anime_movie_server_proto protoreflect.FileDescriptor
+
+var file_ampb_rpc_create_anime_movie_server_proto_rawDesc = []byte{
+	0x0a, 0x28, 0x61, 0x6d, 0x70, 0x62, 0x2f, 0x72, 0x70, 0x63, 0x5f, 0x63, 0x72, 0x65, 0x61, 0x74,
+	0x65, 0x5f, 0x61, 0x6e, 0x69, 0x6d, 0x65, 0x5f, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x5f, 0x73, 0x65,
+	0x72, 0x76, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x04, 0x61, 0x6d, 0x70, 0x62,
+	0x22, 0x39, 0x0a, 0x1d, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x6e, 0x69, 0x6d, 0x65, 0x4d,
+	0x6f, 0x76, 0x69, 0x65, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x12, 0x18, 0x0a, 0x07, 0x61, 0x6e, 0x69, 0x6d, 0x65, 0x49, 0x44, 0x18, 0x01, 0x20, 0x01,
+	0x28, 0x03, 0x52, 0x07, 0x61, 0x6e, 0x69, 0x6d, 0x65, 0x49, 0x44, 0x22, 0x56, 0x0a, 0x1e, 0x43,
+	0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x6e, 0x69, 0x6d, 0x65, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x53,
+	0x65, 0x72, 0x76, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x18, 0x0a,
+	0x07, 0x61, 0x6e, 0x69, 0x6d, 0x65, 0x49, 0x44, 0x18, 0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x07,
+	0x61, 0x6e, 0x69, 0x6d, 0x65, 0x49, 0x44, 0x12, 0x1a, 0x0a, 0x08, 0x73, 0x65, 0x72, 0x76, 0x65,
+	0x72, 0x49, 0x44, 0x18, 0x02, 0x20, 0x01, 0x28, 0x03, 0x52, 0x08, 0x73, 0x65, 0x72, 0x76, 0x65,
+	0x72, 0x49, 0x44, 0x42, 0x2b, 0x5a, 0x29, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f,
+	0x6d, 0x2f, 0x64, 0x6a, 0x2d, 0x79, 0x61, 0x63, 0x69, 0x6e, 0x65, 0x2d, 0x66, 0x6c, 0x75, 0x74,
+	0x74, 0x65, 0x72, 0x2f, 0x67, 0x6f, 0x6a, 0x6f, 0x2f, 0x70, 0x62, 0x2f, 0x61, 0x6d, 0x70, 0x62,
+	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_ampb_rpc_create_anime_movie_server_proto_rawDescOnce sync.Once
+	file_ampb_rpc_create_anime_movie_server_proto_rawDescData = file_ampb_rpc_create_anime_movie_server_proto_rawDesc
+)
+
+func file_ampb_rpc_create_anime_movie_server_proto_rawDescGZIP() []byte {
+	file_ampb_rpc_create_anime_movie_server_proto_rawDescOnce.Do(func() {
+		file_ampb_rpc_create_anime_movie_server_proto_rawDescData = protoimpl.X.CompressGZIP(file_ampb_rpc_create_anime_movie_server_proto_rawDescData)
+	})
+	return file_ampb_rpc_create_anime_movie_server_proto_rawDescData
+}
+
+var file_ampb_rpc_create_anime_movie_server_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_ampb_rpc_create_anime_movie_server_proto_goTypes = []interface{}{
+	(*CreateAnimeMovieServerRequest)(nil),  // 0: ampb.CreateAnimeMovieServerRequest
+	(*CreateAnimeMovieServerResponse)(nil), // 1: ampb.CreateAnimeMovieServerResponse
+}
+var file_ampb_rpc_create_anime_movie_server_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_ampb_rpc_create_anime_movie_server_proto_init() }
+func file_ampb_rpc_create_anime_movie_server_proto_init() {
+	if File_ampb_rpc_create_anime_movie_server_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_ampb_rpc_create_anime_movie_server_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*CreateAnimeMovieServerRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_ampb_rpc_create_anime_movie_server_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*CreateAnimeMovieServerResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_ampb_rpc_create_anime_movie_server_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_ampb_rpc_create_anime_movie_server_proto_goTypes,
+		DependencyIndexes: file_ampb_rpc_create_anime_movie_server_proto_depIdxs,
+		MessageInfos:      file_ampb_rpc_create_anime_movie_server_proto_msgTypes,
+	}.Build()
+	File_ampb_rpc_create_anime_movie_server_proto = out.File
+	file_ampb_rpc_create_anime_movie_server_proto_rawDesc = nil
+	file_ampb_rpc_create_anime_movie_server_proto_goTypes = nil
+	file_ampb_rpc_create_anime_movie_server_proto_depIdxs = nil
+}
